# change-refactoring-python-kata

./: .replit  Makefile  README.md  change.py  pyproject.toml  replit.nix  test_change.py  test_something.py
